Bug 1674000 - Use better colors for the search mode indicator in Windows high-contrast themes. r=ntim
Here's what this looks like in all of Windows 10's high-contrast themes. I tried keeping the border the same color as the text but I don't think it looked good, so I made it the same color as the background.

{F2546521}

Differential Revision: https://phabricator.services.mozilla.com/D95095

UltraBlame original commit: e7f1f7237720f49a9f0b1df1cf5f9ff875bbff94

--- a/browser/themes/shared/urlbar-searchbar.inc.css
+++ b/browser/themes/shared/urlbar-searchbar.inc.css
@@ -2461,6 +2461,93 @@ display
 block
 ;
 }
+/
+*
+Windows
+high
+-
+contrast
+themes
+*
+/
+%
+ifdef
+XP_WIN
+media
+(
+-
+moz
+-
+windows
+-
+default
+-
+theme
+:
+0
+)
+{
+#
+urlbar
+-
+search
+-
+mode
+-
+indicator
+{
+background
+-
+color
+:
+Highlight
+;
+outline
+-
+color
+:
+Highlight
+;
+}
+#
+urlbar
+-
+search
+-
+mode
+-
+indicator
+-
+title
+{
+color
+:
+HighlightText
+;
+}
+#
+urlbar
+-
+search
+-
+mode
+-
+indicator
+-
+close
+{
+stroke
+-
+opacity
+:
+1
+.
+0
+;
+}
+}
+%
+endif
 supports
 -
 moz
